# edge-retail-intelligence

./: .gitignore  CLAUDE.md  LEARNING.md  README.md
core_engine/: CMakeLists.txt
core_engine/configs/: config_infer_primary_peoplenet.txt  config_infer_secondary_reid.txt  config_tracker_NvDCF.yml  default.yaml
core_engine/include/core_engine/: app.hpp  metadata.hpp  pipeline.hpp  publisher.hpp
core_engine/src/: app.cpp  main.cpp  metadata.cpp  pipeline.cpp  publisher.cpp
messaging/zmq/: consumer.py  loitering_detector.py  reid_matcher.py  reid_probe.py  requirements.txt  zone_calibrator.py  zones.yaml
scripts/: download_peoplenet.sh  download_reid.sh  export_reid_onnx.py  install_deps_phase2.sh
